2007-03-25  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Updated.

2007-03-24  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.texi, doc/freeipmi-faq.texi: Updated.

	* ipmiconsole/ipmiconsole.8.in: Fix option name typo.
	
2007-03-23  Albert Chu <chu11@llnl.gov>

	* common/doc/argp-common-hostranged-options.man,
	common/src/pstdout.h: Change default pstdout fanout to 64.
	
2007-03-21  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole.8.in: Fix typo.
	
2007-03-20  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_ipmiconsole_cleanup_ctx_session, ipmiconsole_engine_submit_ctx),
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit): Fix possible session_submit race.
	It has never been hit, but is possible.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_sol_bmc_to_remote_console_packet): Add SOL stolen error code.

	* ipmiconsole/: Support blocking engine submission.  Make it the
	default behavior for the ipmiconsole tool.

2007-03-16  Anand Babu  <ab@zresearch.com>

	* bmc-config/src/bmc-lan-conf-misc-section.c: Fixed incorrect
	return status check.

	* bmc-watchdog/Makefile.am: replaced 
	"$(top_srcdir)/install-sh" with "$(INSTALL)" and "$(DESTDIR)/"
	with "$(DESTDIR)".

	* ipmiconsole/src/libipmiconsole/Makefile.am: like wise.

	* freeipmi/ipmidetect/Makefile.am: like wise.

	* ipmimonitoring/src/libipmimonitoring/Makefile.am: like wise.

	* ipmimonitoring/Makefile.am: replaced install-data-local target
	with automake style macros.

	* Other changes are just compiler warning fixes like unused
	variable or referenced without initialization warning.
	

2007-03-15  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_process_ctx): Fix output corner case.  Fix comment typo.

	* ipmiconsole/src/ipmiconsole/ipmiconsole.c (_set_mode_raw): Use