@@ -1,3 +1,13 @@
+2007-03-28  Albert Chu <chu11@llnl.gov>
+
+	* common/src/argp-common.c (__secure_memset): New function.
+	
+	* common/src/argp-common.c (common_parse_opt): Clear password.
+
+	* bmc-info/, bmc-config/, ipmi-chassis/, ipmi-pef/, ipmi-raw/,
+	ipmi-sel/, ipmi-sensors/: Don't clear out all argv data.  Only
+	password.
+	
 2007-03-25  Albert Chu <chu11@llnl.gov>
 
 	* doc/freeipmi-faq.texi: Updated.
